kubernetes-setup-1.1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-demo-v1-1
  labels:
    app: istio-demo-v1-1
spec:
  selector:
    matchLabels:
      app: istio-demo-v1-1
  replicas: 1
  template:
    metadata:
      labels:
        app: istio-demo-v1-1
    spec:
      containers:
      - name: istio-demo
        image: nitinzzz/istiodemo:v1.1
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: istio-demo-v1-1
  labels:
    app: istio-demo-v1-1
spec:
  ports:
  - protocol: TCP
    port: 8080
    name: http
  selector:
    app: istio-demo-v1-1
