fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-vs
spec:
  hosts:
  - deopsschool.istio.demo
  gateways:
    - http-gateway
  http:
    - name: istio-demo
      match:
      - uri:
          prefix: /v1/istiodemo
      route:
        - destination:
            host: istio-demo-v1-0
            port:
              number: 8080
      fault:
        abort:
          percentage:
             value: 100.0
          httpStatus: 500
