istio-test.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  namespace: bookinfo
  name: bookinfo-gw

spec:

  selector:
    istio: ingressgateway

  servers:

  - port:
      number: 80
      protocol: HTTP
      name: http
    hosts:
    - bookinfo.example.com
---


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  namespace: bookinfo
  name: bookinfo-virt-svc

spec:

  gateways:
  - bookinfo-gw

  hosts:
  - "*"

  http:

  - route:
    - destination:
        host: productpage.bookinfo.svc.cluster.local
        port:
          number: 9080
---
